--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,6 +1,6 @@
 html {
-  position: relative;
   min-height: 100%;
+  position: relative;
 }
 
 body {
@@ -8,9 +8,29 @@ body {
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 20px;
   background-color: #f5f5f5;
+  bottom: 0;
+  height: 20px;
+  position: absolute;
+  width: 100%;
+}
+
+.search-result {
+  cursor: pointer;
+  height: 100px;
+  margin-bottom: 2px;
+  overflow-y: scroll;
+}
+
+.search-result-image {
+  float: left;
+  height: 100px;
+  margin-right: 5px;
+}
+
+#queue {
+  min-height: 150px;
+  overflow-y: scroll;
+  padding: 10px 0;
+  white-space: nowrap;
 }
